# mixer_rust_wrappers

./: .env.example  .gitignore  Cargo.toml  README.md  get_coverage.sh  log4rs.yml
.circleci/: config.yml
examples/: Cargo.toml  chat.rs  constellation.rs  get_notifications.rs  oauth_shortcode.rs
src/: lib.rs  main.rs
src/chat/: mod.rs  models.rs
src/constellation/: errors.rs  lib.rs  main.rs.example  mod.rs  models.rs
src/internal/: mod.rs
src/oauth/: mod.rs  shortcode.rs
src/rest/: chat_helper.rs  errors.rs  lib.rs  mod.rs  webhook_helper.rs
