[package]
name = "mixer_rust_wrappers"
version = "0.1.0"
authors = ["Celeo <celeodor@gmail.com>"]
edition = "2018"

[lib]
name = "mixer_rust_wrappers"
path = "src/lib.rs"

[[bin]]
name = "driver"
path = "src/main.rs"

[dependencies]
atomic-counter = "1.0.1"
failure = "0.1.5"
lazy_static = "1.3.0"
log = "0.4.8"
log4rs = "0.8.3"
kankyo = "0.3.0"
reqwest = "0.9.19"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
url = "2.1.0"
typed-builder = "0.3.0"

[dependencies.ws]
version = "0.9.0"
features = ["ssl"]

[dev-dependencies]
mockito = "0.17.1"
tempfile = "3.0.8"
