[package]
name = "mixer_wrappers"
version = "0.4.0"
authors = ["Celeo <celeodor@gmail.com>"]
edition = "2018"
description = "Wrappers around the Mixer APIs"
repository = "https://github.com/Celeo/mixer_rust_wrappers"
readme = "README.md"
keywords = ["mixer"]
categories = ["api-bindings"]
license = "Apache-2.0 AND MIT"

[badges]
circle-ci = { repository = "https://github.com/Celeo/mixer_rust_wrappers", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
name = "mixer_wrappers"
path = "src/lib.rs"

[dependencies]
atomic-counter = "1.0.1"
failure = "0.1.5"
lazy_static = "1.3.0"
log = "0.4.8"
reqwest = "0.9.19"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
url = "2.1.0"
typed-builder = "0.3.0"

[dependencies.ws]
version = "0.9.0"
features = ["ssl"]

[dev-dependencies]
mockito = "0.17.1"
